# ci-cd-cppproject

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: add.h  calculator.h  order_service.h
src/: add.cpp  calculator.cpp  main.cpp  order_service.cpp
tests/: test_add.cpp  test_calculator.cpp  test_order_service_integration.cpp
